--- a/Test01SpringBoot02/src/main/resources/application.properties
+++ b/Test01SpringBoot02/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.messages.encoding=UTF-8
 logging.file=D:\\logs\\log.log
 logging.level.org.springframework.web=info
 #\u56E0\u4E3A\u9AD8\u7248\u672C\u7684ConfigurationProperties\u6CE8\u89E3\u53D6\u6D88\u4E86locations\u5C5E\u6027\uFF0C\u53EF\u4EE5\u4F7F\u7528\u4E0B\u9762\u7684\u8BED\u53E5\u4EE3\u66FF\uFF0C\u4F46\u662F\u591A\u79CD\u6587\u4EF6\u8BE5\u5982\u4F55\u89E3\u51B3
-spring.profiles.active=book
+spring.profiles.active=book,author
